--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,9 @@
 			  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
 				<span id="sucess1" ></span>
 			  </div>
+			  <div class="alert alert-danger invalid-sueccs-msg" id="invalid_div1" role="alert" hidden>
+				<span id="invalid1" ></span>
+			</div>
 			  <div class="alert alert-danger error-msg" id="error_div1" role="alert" hidden>
 				<span id="error1" ></span>
 			  </div>
@@ -325,9 +328,13 @@
 								<div class="alert alert-danger sueccs-msg" id="sucess_div3" role="alert" hidden>
 									<span id="sucess3"></span>
 								  </div>
+								  <div class="alert alert-danger invalid-sueccs-msg" id="invalid_div3" role="alert" hidden>
+									<span id="invalid3" ></span>
+								</div>
 								  <div class="alert alert-danger error-msg" id="error_div3" role="alert" hidden>
 									<span id="error3"></span>
 								  </div>
+								  
 							</div>
 							<div class="sbscribe-section" id="submit_5">
 								<button class="sbt-btn" id="btn-d3" onclick="myFunction3()">Submit
