--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,31 @@
+/* footer manu start here */
+ul.middle_unorderList li:nth-child(1) {
+    margin-left: 0 !important;
+}
+ul.middle_unorderList li a {
+    width: auto !important;
+    height: auto !important;
+    background: none !important;
+    font-size: 20px !important;
+    color: #ffffff !important;
+    border-radius: unset !important;
+    text-decoration: none;
+}
+ul.middle_unorderList {
+    margin: 0;
+    top: auto;
+    bottom: 0;
+}
+ul.middle_unorderList li {
+    width: 94px;
+}
+ul.middle_unorderList li a:before {
+    background: unset !important;
+}
+/* footer manu close here */
+
+
+
 /*-----Start no download section----*/
 .video-content_mobile {
     display: none;
@@ -3765,7 +3793,8 @@ img.top-line-m0bile {
     color: #ffffff;
     font-family: 'Avenir LT Pro';
     text-align: center;
-    margin-left: -48px;
+    margin-left: 0;
+    padding-top: 30px;
 }
 
 .footer-overlap img.bottom-line {
@@ -3794,8 +3823,9 @@ img.top-line-m0bile {
 .middle-sec-footer {
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .footer-shapes img.footer-left-ic {
@@ -3826,10 +3856,6 @@ img.top-line-m0bile {
 /*social-ic-start-here*/
 .footer_WNDR ul {
     display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 0;
 }
 
@@ -7749,6 +7775,12 @@ img.blog-section-img-tabs {
     .banner-WNDR-outer {
         top: 344px !Important;
     }
+    ul.middle_unorderList li {
+        width: 67px;
+    }
+    ul.middle_unorderList li a {
+        font-size: 14px !important;
+    }
 
     .banner-logo-div {
         top: 214px;
@@ -8746,6 +8778,15 @@ img.blog-section-img-tabs {
 
 @media screen and (max-width: 992px) {
     /* 17 */
+    .middle_unorderList li a {
+        text-align: left !important;
+    }
+    .middle_unorderList li {
+        margin: 0 !important;
+    }
+    ul.middle_unorderList {
+        display: block;
+    }
     h2.uk-scrollspy-inview {
         font-size: 40px;
         margin-bottom: 30px;
@@ -12335,6 +12376,15 @@ img.blog-section-img-tabs {
         padding-bottom: 30px;
         padding-top: 30px;
     }
+    .footerManu_middle {
+        top: -147px;
+        position: absolute;
+    }
+    ul.middle_unorderList {
+        display: inline-flex;
+        padding-left: 160px;
+        margin-bottom: 30px;
+    }
     /* 22 */
     .mobilelandscapeview {
         display: none !important;
@@ -12641,6 +12691,7 @@ img.blog-section-img-tabs {
     .right-sec-footer-social {
         justify-content: center;
         margin-right: 0;
+        margin-top: 30px;
     }
 
     .middle-sec-footer p {
@@ -12659,6 +12710,24 @@ img.blog-section-img-tabs {
 
 @media only screen and (max-width: 767px) {
     /* 18 */
+    .sbscribe-bg h4 {
+        font-size: 20px;
+    }
+    ul.middle_unorderList {
+    position: absolute;
+    top: 0;
+    right: -170px;
+    display: inline-flex;
+}
+    ul.middle_unorderList li a {
+        font-size: 14px !important;
+        text-align: center !important;
+    }    
+    
+    
+    .about-content h1.uk-scrollspy-inview {
+        font-size: 20px !important;
+    }
     .model-market p {
         text-align: center;
     }
@@ -16422,6 +16491,19 @@ img.blog-section-img-tabs {
 @media screen and (max-width: 322px) {
     .wndr_engine h2 {
         font-size: 18px;
+    }
+    ul.middle_unorderList li {
+        width: 60px;
+    }
+    ul.middle_unorderList li a {
+        font-size: 10px !important;
+        text-align: center !important;
+    }
+    ul.middle_unorderList {
+        position: absolute;
+        top: 0;
+        right: -150px;
+        display: inline-flex;
     }
 
     .wndr_engine p {
