--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta name="description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games.">
    
-   <meta name="Keywords" content="Best Browser games,Desktop Games,best free games,best crypto games,free online multiplayer games,multiplayer games,best multiplayer games,multiplayer,free pc games">
+   <meta name="Keywords" content="Best Browser Metaverse,NFT Games,Crypto games,Web 3,Online games,Desktop Games,PC Games,Free games,Free online games,Multi Player,Multiplayer Games,Blockchain games,crypto games,blockchain games">
    <link rel="canonical" href="https://wndr.com" />
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
    <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
@@ -190,13 +190,25 @@
                                        <img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
                                    </div>
                                </div>
-                               <div class="col-md-5 col-lg-5 copyright-footer">
+                               <div class="col-md-7 col-lg-5 copyright-footer">
                                    <div class="middle-sec-footer uk-scrollspy-inview"
                                        uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+                                       <div class="footerManu_middle">
+                                       <ul class="middle_unorderList">
+    
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">About </a></li>
+                                        <li><a href="#">Our Vision</a></li>
+                                        <li><a href="#">Team</a></li>
+                                        <li><a href="#">Contact</a></li>
+                                        </ul>
+                                        </div>
+                                        <div class="footerManu_paragraph">
                                        <p>WNDR, ALL RIGHTS RESERVED @ 2022</p>
+                                       </div>
                                    </div>
                                </div>
-                               <div class="col-md-4 col-lg-3 mbl-footer-social">
+                               <div class="col-md-2 col-lg-3 mbl-footer-social">
                                    <div class="right-sec-footer-social">
                                        <ul>
                                           
