--- a/templates/base.html
+++ b/templates/base.html
@@ -196,11 +196,11 @@
                                        <div class="footerManu_middle">
                                        <ul class="middle_unorderList">
     
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">About </a></li>
-                                        <li><a href="#">Our Vision</a></li>
-                                        <li><a href="#">Team</a></li>
-                                        <li><a href="#">Contact</a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/about">About </a></li>
+                                        <li><a href="/vision">Our Vision</a></li>
+                                        <li><a href="/teams">Team</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                         </ul>
                                         </div>
                                         <div class="footerManu_paragraph">
