--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -578,16 +578,18 @@
 	<!---OUR VISION SECTION-->
 	<!-- footer start here -->
 	<footer>
-		<div class="footer_WNDR  remove_saveimage">
+		<div class="footer_WNDR remove_saveimage">
 			<div class="footer-overlap">
-				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top.png">
-				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
-				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
-				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
+				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
+				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile"
+					alt="footer2">
+				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
+				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile"
+					alt="footer4">
 			</div>
 			<div class="footer-shapes">
-				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img.png">
-				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
+				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerLeft_img">
+				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footerRight_img">
 			</div>
 			<div class="container">
 				<div class="footer-outer">
@@ -597,27 +599,43 @@
 								<img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
 							</div>
 						</div>
-						<div class="col-md-5 col-lg-5 copyright-footer">
+						<div class="col-md-7 col-lg-5 copyright-footer">
 							<div class="middle-sec-footer uk-scrollspy-inview"
 								uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+								<div class="footerManu_middle">
+								<ul class="middle_unorderList">
+
+								 <li><a href="#">Home</a></li>
+								 <li><a href="#">About </a></li>
+								 <li><a href="#">Our Vision</a></li>
+								 <li><a href="#">Team</a></li>
+								 <li><a href="#">Contact</a></li>
+								 </ul>
+								 </div>
+								 <div class="footerManu_paragraph">
 								<p>WNDR, ALL RIGHTS RESERVED @ 2022</p>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-lg-3 mbl-footer-social">
+						<div class="col-md-2 col-lg-3 mbl-footer-social">
 							<div class="right-sec-footer-social">
 								<ul>
+								   
 									<li class="uk-scrollspy-inview"
-									uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-									<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+										uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
+										<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+									</li>
+								 
+									<li class="uk-scrollspy-inview"
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+									<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
 								</li>
 								<li class="uk-scrollspy-inview"
-								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-								<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-							</li>
-							<li class="uk-scrollspy-inview"
-							uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-							<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
-						</li>
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+									<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
+								</li>
+							
+							
 								</ul>
 							</div>
 						</div>
