--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -413,16 +413,18 @@
 </div>
 <!-- footer start here -->
 <footer>
-	<div class="footer_WNDR footer-roadmap remove_saveimage">
+	<div class="footer_WNDR remove_saveimage">
 		<div class="footer-overlap">
-			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top">
-			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
-			<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
-			<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
+			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
+			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile"
+				alt="footer2">
+			<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
+			<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile"
+				alt="footer4">
 		</div>
 		<div class="footer-shapes">
-			<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img"> 
-			<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
+			<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerLeft_img">
+			<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footerRight_img">
 		</div>
 		<div class="container">
 			<div class="footer-outer">
@@ -432,31 +434,44 @@
 							<img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
 						</div>
 					</div>
-					<div class="col-md-5 col-lg-5 copyright-footer">
-						<div class="middle-sec-footer uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+					<div class="col-md-7 col-lg-5 copyright-footer">
+						<div class="middle-sec-footer uk-scrollspy-inview"
+							uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+							<div class="footerManu_middle">
+							<ul class="middle_unorderList">
+
+							 <li><a href="#">Home</a></li>
+							 <li><a href="#">About </a></li>
+							 <li><a href="#">Our Vision</a></li>
+							 <li><a href="#">Team</a></li>
+							 <li><a href="#">Contact</a></li>
+							 </ul>
+							 </div>
+							 <div class="footerManu_paragraph">
 							<p>WNDR, ALL RIGHTS RESERVED @ 2022</p>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-4 col-lg-3 mbl-footer-social">
+					<div class="col-md-2 col-lg-3 mbl-footer-social">
 						<div class="right-sec-footer-social">
-
-
-						<ul>
-
+							<ul>
+							   
+								<li class="uk-scrollspy-inview"
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
+									<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								</li>
+							 
+								<li class="uk-scrollspy-inview"
+								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+								<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							</li>
 							<li class="uk-scrollspy-inview"
-							uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-							<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-						</li>
-						<li class="uk-scrollspy-inview"
-						uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-						<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-					</li>
-					<li class="uk-scrollspy-inview"
-						uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-						<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
-					</li>
-						</ul>
-
+								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+								<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
+							</li>
+						
+						
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -514,8 +529,10 @@ function myFunction() {
 			$('#myInput').val('');
 			$("#sucess_div").show().delay(3000).fadeOut();;
 			$("#btn-d").attr("disabled", false);
+			$.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
 
 			  }
+			
 			
 		},
         });}
