--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
    <script src="https://use.fontawesome.com/b197abb434.js"></script>
    <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
    
-
+   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10997461539"></script> 
    <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -54,7 +54,7 @@
     <!-- End Google Tag Manager -->
     
    <script>
-    gtag('event', 'conversion', {'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so'});
+    
   </script>
 </head>
 <body>
@@ -416,7 +416,24 @@
                                 $('#myInput1').val('');
                                 $("#sucess_div1").show().delay(3000).fadeOut();
                                 $("#btn-d1").attr("disabled", false);
-                                $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
+                                
+                                function gtag_report_conversion(url) {
+                                    console.log('after gtag conversion');
+                                    var callback = function () {
+                                      if (typeof(url) != 'undefined') {
+                                        console.log('inside error');
+                                        window.location = url;
+                                        
+                                      }
+                                    };
+                                    gtag('event', 'conversion', {
+                                        'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so',
+                                        'event_callback': callback
+                                    });
+                                    return false;
+                                  }
+                                  gtag_report_conversion();
+                                console.log('after script conversion');
                              
                               }
                               
@@ -466,7 +483,23 @@
                                 $('#myInput2').val('');
                                 $("#sucess_div2").show().delay(3000).fadeOut();
                                 $("#btn-d2").attr("disabled", false);
-                                $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
+                                function gtag_report_conversion(url) {
+                                    console.log('after gtag conversion');
+                                    var callback = function () {
+                                      if (typeof(url) != 'undefined') {
+                                        console.log('inside error');
+                                        window.location = url;
+                                        
+                                      }
+                                    };
+                                    gtag('event', 'conversion', {
+                                        'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so',
+                                        'event_callback': callback
+                                    });
+                                    return false;
+                                  }
+                                  gtag_report_conversion();
+                                console.log('after script conversion');
                               
                               }
                               
@@ -512,7 +545,7 @@
                                 $('#myInput3').val('');
                                 $("#sucess_div3").show().delay(3000).fadeOut();
                                 $("#btn-d3").attr("disabled", false);
-                                $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
+                                
                         
                               }
                               
